--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -4,7 +4,7 @@
 <link
   rel="shortcut icon"
   type="image/x-icon"
-  href="{{ '../_assets/favicon.ico' | relative_url }}"
+  href="{{ './_assets/favicon.ico' | relative_url }}"
 />
 
 <!-- end custom head snippets -->
